2003-05-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am: New file.
	* acx_have_gssapi.m4: Ditto.
	* cvs_func_printf_ptr.m4: Ditto.